# photon

./: CMakeLists.txt  README.md  compile.sh
.cache/clangd/index/: Assembler.cpp.379FEFAC8BFFA086.idx  Assembler.hpp.A8089B1AA0632191.idx  Colors.hpp.CD807A0FE81A5FBA.idx  CommandLine.cpp.2A58EB0F72B59330.idx  CommandLine.hpp.DD6A0A7EF54A0F64.idx  ComponentTest.cpp.D61087F02DEDF561.idx  ComponentTest.hpp.6952C473BCF80592.idx  ComponentTestCase.hpp.4D087996EBA12DEC.idx  ComponentTestPrint.hpp.0809D4F1602A28AC.idx  ComponentTests.cpp.871C761AA1CC81C0.idx  ComponentTests.hpp.40FB1D610A9FB0DF.idx  Debug.hpp.E32FD9DDADACBFC8.idx  Errors.cpp.87125003665BDFFA.idx  Errors.hpp.FDDE04A9B3D56D31.idx  Files.cpp.971A1692B7EE8EDE.idx  Files.hpp.8D62199BD8DE2AC5.idx  GPIO.cpp.983ACEAC40931E7E.idx  GPIO.hpp.27B0C5DC8E68785F.idx  IntegrationTests.hpp.34518793238D4505.idx  ProgramMemory.hpp.9AC9C6E442B009C7.idx  ProgramMemory.hpp.AE1F372BFFEE8D2C.idx  SimulationTestBuilder.cpp.063A1DFB82969CF0.idx  SimulationTestBuilder.hpp.0386D0E40A6E8153.idx  TestAssembler.cpp.4824DF16C0479839.idx  TestBuilder.cpp.9D4CF4402D3E1130.idx  TestBuilder.hpp.5093CA078A1BD579.idx  TestFiles.cpp.72CEBC099144C7B8.idx  TestTestBuilder.cpp.33F86CA93D444D09.idx  TestUtil.cpp.04F353608C8C6553.idx  Timer.cpp.EA5EB87060D601EE.idx  Timer.hpp.60AC99135F193D05.idx  Types.hpp.D0723C6CCB288E17.idx  Util.cpp.D9C66701BE08D626.idx  Util.cpp.ECDC4B421E7E4C9D.idx  Util.hpp.BC2791819257806F.idx  Util.hpp.C6A7BC153DBEC7CC.idx  main.cpp.7C938CBEA4282237.idx
files/: hello.txt
resources/: hello.txt
resources/files/: hi.txt
resources/programs/: SET_mid_1.neutrino  SET_mid_2.neutrino  neil_buffooner_2.ntn  neil_buffoonery.ntn  neil_buffoonery_3.ntn  sine_wave.ntn  test.neutrino
resources/programs/ADC/: carry_2.ntn  negative.ntn  no_carry.ntn  positive.ntn
resources/programs/ADD/: negative_negative.ntn  negative_positive.ntn  positive_negative.ntn  positive_positive.ntn
resources/programs/BDE/: branch.ntn  no_branch.ntn
resources/programs/BDG/: branch.ntn
resources/programs/BDN/: no_branch.ntn
resources/programs/BDU/: bdu_1.ntn  bdu_2.ntn
resources/programs/BIG/: no_branch.ntn
resources/programs/BIL/: branch.ntn  no_branch.ntn
resources/programs/BIU/: biu_2.ntn
resources/programs/CMP/: equal.ntn  less.ntn
resources/programs/DEC/: negative.ntn  positive.ntn  underflow.ntn
resources/programs/INC/: negative.ntn  overflow.ntn  positive.ntn
resources/programs/INV/: negative.ntn  positive.ntn
resources/programs/LDD/: ldd_1.ntn
resources/programs/MFD/: mfd_2.ntn  one_register.ntn
resources/programs/MOV/: all_registers.ntn  circular.ntn  register_2_to_1.ntn
resources/programs/MTD/: one_register.ntn
resources/programs/NOT/: not.ntn
resources/programs/ORR/: orr.ntn
resources/programs/SBC/: negative.ntn  positive.ntn
resources/programs/SET/: all_bits_1.ntn  all_bits_2.ntn  mid_1.neutrino  negative.ntn  register_1.ntn  registers_1_to_8.ntn
resources/programs/SET/all_bits/: 1.ntn  10.ntn  11.ntn  12.ntn  13.ntn  14.ntn  2.ntn  3.ntn  4.ntn  5.ntn  6.ntn  7.ntn  8.ntn  9.ntn
resources/programs/SUB/: negative_negative.ntn  negative_positive.ntn  positive_negative.ntn  positive_positive.ntn
resources/programs/TST/: equal.ntn  greater.ntn
resources/programs/XOR/: xor.ntn
resources/programs/tests/ADD/: positive_negative.ntn  positive_positive.ntn
resources/programs/tests/AND/: and.ntn
resources/programs/tests/BDG/: no_branch.ntn
resources/programs/tests/BDL/: branch.ntn  no_branch.ntn
resources/programs/tests/BDN/: branch.ntn
resources/programs/tests/BIE/: branch.ntn  no_branch.ntn
resources/programs/tests/BIG/: branch.ntn
resources/programs/tests/BIL/: no_branch.ntn
resources/tests/in/: ADC.txt  ADD.txt  AND.txt  BDE.txt  BDG.txt  BDL.txt  BDN.txt  BDU.txt  BIE.txt  BIG.txt  BIL.txt  BIN.txt  BIU.txt  CMP.txt  DEC.txt  INC.txt  INV.txt  MOV.txt  MTD|MFD.txt  NOT.txt  ORR.txt  SBC.txt  SET.txt  STD|LDD.txt  STI|LDI.txt  SUB.txt  TST.txt  XOR.txt
src/: CMakeLists.txt  main.cpp
src/Assembler/: Assembler.cpp  Assembler.hpp
src/CommandLine/: CommandLine.cpp  CommandLine.hpp
src/ComponentTest/: ComponentTest.cpp  ComponentTest.hpp  ComponentTestCase.hpp  ComponentTestPrint.cpp  ComponentTestPrint.hpp  ComponentTests.cpp  ComponentTests.hpp  IntegrationTests.cpp  IntegrationTests.hpp
src/Electronics/: Debug.cpp  Debug.hpp  GPIO.cpp  GPIO.hpp  ProgramMemory.cpp
src/Files/: Files.cpp  Files.hpp
src/ProgramMemory/: GPIO.cpp  ProgramMemory.cpp  ProgramMemory.hpp  verify.cpp  write.cpp
src/SimulationTestBuilder/: SimulationTestBuilder.cpp  SimulationTestBuilder.hpp
src/TestBuilder/: TestBuilder.cpp  TestBuilder.hpp
src/Util/: Colors.hpp  Errors.cpp  Errors.hpp  Timer.cpp  Timer.hpp  Types.hpp  Util.cpp  Util.hpp
tests/: CMakeLists.txt  TestAssembler.cpp  TestFiles.cpp  TestTestBuilder.cpp  TestUtil.cpp  Util.cpp  Util.hpp
(+21 files in other folders)
